sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:4: error: illegal start of simple expression
  while (pos != getNombreValeurs()-1){
  ^